设计模式七大原则——单一职责原则

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Java-Base</module>
         <module>DataStructure-Algorithm</module>
+        <module>Design-Pattern</module>
     </modules>
 
 
