设计模式——cglib代理模式

--- a/Design-Pattern/pom.xml
+++ b/Design-Pattern/pom.xml
@@ -16,6 +16,13 @@
             <groupId>com.lhang</groupId>
             <artifactId>Java-Study</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
