--- a/Spring4/src/db.properties
+++ b/Spring4/src/db.properties
@@ -2,3 +2,12 @@ user=root
 password=lhang
 driverClass=com.mysql.jdbc.Driver
 jdbcUrl=jdbc:mysql://192.168.3.4:3306/test
+
+#\u6570\u636E\u6E90\u914D\u7F6E
+jdbc.user=root
+jdbc.password=lhang
+jdbc.driverClass=com.mysql.jdbc.Driver
+jdbc.jdbcUrl=jdbc:mysql://192.168.3.4:3306/hibernate
+
+jdbc.inintPoolSize=5
+jdbc.maxPoolSize=10
