--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
     </dependencies>
 </project>
